--- a/app/Templates/view.html
+++ b/app/Templates/view.html
@@ -3,10 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Formulario de Cadastro</title>
-      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+
 </head>
 <body>
     <div class="col-8 m-auto pt-2 pb-2 text-center">
+        <h1>Visualização dos dados</h1>
+    </div>
+
+    <div class="col-8 m-auto pt-2 pb-2 text-center">
+        <a href="/" class="btn btn-success">Voltar</a>
+    </div>
+
+    <div class="col-8 m-auto pt-2 pb-2 text-center">
+        <strong> Piscicultor:</strong>{{db.piscicultor}}<br>
+        <strong> RG:</strong>{{db.rg}}<br>
+        <strong> Contato:</strong>{{db.contato}}<br>
+     </div>
+
+   <div class="col-8 m-auto pt-2 pb-2 text-center">
         <h1>Visualização dos dados</h1>
     </div>
 
