--- a/app/Templates/Index.html
+++ b/app/Templates/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Piscicultura</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+
 </head>
 <body>
     <div class="col-8 m-auto pt-2 pb-2 text-center">
@@ -15,9 +15,7 @@
     </div>
 
     <div class="col-8 m-auto pt-3 pb-2 text-center">
-        <form method="get">
-            <input type="text" id="search" name="search" class="form-control" placeholder="Buscar">
-        </form>
+
       </div>
     <div class="col-8 m-auto pt-4 pb-2 text-center">
         <table class="table">
@@ -72,13 +70,12 @@
             <a href="/form2" class="btn-success"> Adicionar Viveiros</a>
     </div>
 
-    <div class="col-8 m-auto pt-4 pb-2 text-center"style="font-size: 12px;">
+    <div class="col-8 m-auto pt-4 pb-2 text-center">
         <table class="table">
 
           <!--INICIO DO CABEÇALHO -->
-          <thead class="thead-dark">
+          <thead class="thead-dark" style="font-size: 10px;">
             <tr>
-
                 <th scope="col">#</th>
                 <th scope="col">Biomassa do viveiro</th>
                 <th scope="col">Data Inicial</th>
@@ -115,9 +112,10 @@
                  <td>{{dbs.numeroPeixesViveiro}}</td>
 
                 <td>
-                    <a href="/view2/{{dbs.id}}/" class ="btn btn-dark">Visualizar</a>
-                     <a href="/edit2/{{dbs.id}}/" class ="btn btn-primary">Editar</a>
-                     <a href="delete2/{{dbs.id}}/" class ="btn btn-danger btnDel">Deletar</a>
+
+                    <a href="/view2/{{dbs.id}}/" class ="btn btn-dark"style="font-size: 8px;">Visualizar</a>
+                     <a href="/edit2/{{dbs.id}}/" class ="btn btn-primary"style="font-size: 8px;">Editar</a>
+                     <a href="delete2/{{dbs.id}}/" class ="btn btn-danger btnDel"style="font-size: 8px;">Deletar</a>
                 </td>
             </tr>
                 {% endfor %}
@@ -186,9 +184,9 @@
                  <td>{{dbs.precoracao}}</td>
                  <td>{{dbs.protreinabruta}}</td>
                 <td>
-                     <a href="/view4/{{dbs.id}}/" class ="btn btn-dark">Visualizar</a>
-                     <a href="/edit4/{{dbs.id}}/" class ="btn btn-primary">Editar</a>
-                     <a href="delete4/{{dbs.id}}/" class ="btn btn-danger btnDel">Deletar</a>
+                     <a href="/view4/{{dbs.id}}/" class ="btn btn-dark"style="font-size: 8px;">Visualizar</a>
+                     <a href="/edit4/{{dbs.id}}/" class ="btn btn-primary"style="font-size: 8px;">Editar</a>
+                     <a href="delete4/{{dbs.id}}/" class ="btn btn-danger btnDel"style="font-size: 8px;">Deletar</a>
                 </td>
             </tr>
             {% endfor %}
