--- a/app/Templates/Index.html
+++ b/app/Templates/Index.html
@@ -1,196 +1,42 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+{% load static %}
+ <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Piscicultura</title>
-
+    <title>Home</title>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
+<div class="col-8 m-auto pt-2 pb-2 text-center">
+        <h1>Cadastro Viveiro</h1>
+    </div>
+
     <div class="col-8 m-auto pt-2 pb-2 text-center">
-        <h1>FISH INFO</h1>
+        <a href="/" class="btn btn-success">Voltar</a>
     </div>
 
-    <div class="col-8 m-auto pt-3 pb-2 text-center">
-            <a href="/form" class="btn-success"> Adicionar Piscicultores</a>
+<div class="col-8 m-auto pt-2 pb-2 text-center">
+    <div id="result"></div>
+        <form name="formviveiro" id="form2" action="{% if db %}/update2/{{db.id}}/{% else %}/create2/{% endif %}" method="POST">
+            {% csrf_token %}
+            <div class="formviveiro-group mt-4">Biomassa do Viveiro:{{formviveiro.biomassaViveiro}}</div>
+            <div class="formviveiro-group mt-4">Data Inicial:{{formviveiro.dataIniciar}}</div>
+            <div class="formviveiro-group mt-4">Mortalidade:{{formv.mortalidade}}</div>
+            <div class="formviveiro-group mt-4">Data da Retirada:{{formv.dataRetirada}}</div>
+            <div class="formviveiro-group mt-4">N° do Viveiro:{{formviveiro.numeroViveiro}}</div>
+            <div class="formviveiro-group mt-4">Temperatura:{{formviveiro.temperatura}}</div>
+            <div class="formviveiro-group mt-4">LarguraM:{{formviveiro.largura_M}}</div>
+            <div class="formviveiro-group mt-4">Ganho Viveiro:{{formviveiro.ganhoViveiro}}</div>
+            <div class="formviveiro-group mt-4">Lado MenorM:{{formviveiro.ladoMenor_M}}</div>
+            <div class="formviveiro-group mt-4">PH da Agua:{{formviveiro.pH_daAgua}}</div>
+            <div class="formviveiro-group mt-4">Amostragem Viveiro:{{formviveiro.amostragemViveiro}}</div>
+            <div class="formviveiro-group mt-4">N° de Peixe no viveiro:{{formviveiro.numeroPeixesViveiro}}</div>
+            <div class="formviveiro-group mt-4">
+                <input type="submit" class=" btn btn-success" value="Salvar">
+            </div>
+        </form>
+
+
     </div>
-
-    <div class="col-8 m-auto pt-3 pb-2 text-center">
-
-      </div>
-    <div class="col-8 m-auto pt-4 pb-2 text-center">
-        <table class="table">
-          <!--INICIO DO CABEÇALHO -->
-          <thead class="thead-dark">
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">Piscicultor</th>
-                <th scope="col">RG</th>
-                <th scope="col">Contato</th>
-                <th scope="col">Ações</th>
-            </tr>
-          </thead>
-            <!-- FIM DO CABEÇALHO-->
-          <tbody>
-           <!-- CORPO DA LINHA-->
-               {% for dbs in db %}
-            <tr>
-                 <th scope="row">{{dbs.id}}</th>
-                 <td>{{dbs.piscicultor}}</td>
-                 <td>{{dbs.rg}}</td>
-                 <td>{{dbs.contato}}</td>
-                <td>
-                    <a href="/view/{{dbs.id}}/" class ="btn btn-dark">Visualizar</a>
-                     <a href="/edit/{{dbs.id}}/" class ="btn btn-primary">Editar</a>
-                     <a href="delete/{{dbs.id}}/" class ="btn btn-danger btnDel">Deletar</a>
-                </td>
-            </tr>
-            {% endfor %}
-         </tbody>
-        </table>
-    </div>
-
-     <div class="pagination">
-    {% if db.has_previous %}
-        <a href="?page={{db.previous_page_number}}"> < </a>
-    {% endif %}
-
-    {{db.number}}
-
-    {% if db.has_next %}
-        <a href="?page={{db.next_page_number}}"> > </a>
-    {% endif %}
-    </div>
-
-
-
-         {% load static %}
-         <script src="{% static 'javascripts.js' %}"></script>
-
-     <div class="col-8 m-auto pt-3 pb-2 text-center">
-            <a href="/form2" class="btn-success"> Adicionar Viveiros</a>
-    </div>
-
-    <div class="col-8 m-auto pt-4 pb-2 text-center">
-        <table class="table">
-
-          <!--INICIO DO CABEÇALHO -->
-          <thead class="thead-dark" style="font-size: 10px;">
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">Biomassa do viveiro</th>
-                <th scope="col">Data Inicial</th>
-                <th scope="col">Mortalidade</th>
-                <th scope="col">Data Retirada</th>
-                <th scope="col">N° viveiro</th>
-                <th scope="col">Temperatura</th>
-                <th scope="col">LarguraM</th>
-                <th scope="col">Ganho Viveiro</th>
-                <th scope="col">Lado menorM</th>
-                <th scope="col">PH da agua</th>
-                <th scope="col">Amostragem Veveiro</th>
-                <th scope="col">N° de peixe no Viveiro</th>
-                <th scope="col">Ações</th>
-            </tr>
-          </thead>
-            <!-- FIM DO CABEÇALHO-->
-          <tbody>
-           <!-- CORPO DA LINHA-->
-               {% for dbs in db %}
-            <tr>
-                 <th scope="row">{{dbs.id}}</th>
-                 <td>{{dbs.biomassaViveiro}}</td>
-                 <td>{{dbs.dataIniciar}}</td>
-                 <td>{{dbs.mortalidade}}</td>
-                 <td>{{dbs.dataRetirada}}</td>
-                 <td>{{dbs.numeroViveiro}}</td>
-                 <td>{{dbs.temperatura}}</td>
-                 <td>{{dbs.largura_M}}</td>
-                 <td>{{dbs.ganhoViveiro}}</td>
-                 <td>{{dbs.ladoMenor_M}}</td>
-                 <td>{{dbs.pH_daAgua}}</td>
-                 <td>{{dbs.amostragemViveiro}}</td>
-                 <td>{{dbs.numeroPeixesViveiro}}</td>
-
-                <td>
-
-                    <a href="/view2/{{dbs.id}}/" class ="btn btn-dark"style="font-size: 8px;">Visualizar</a>
-                     <a href="/edit2/{{dbs.id}}/" class ="btn btn-primary"style="font-size: 8px;">Editar</a>
-                     <a href="delete2/{{dbs.id}}/" class ="btn btn-danger btnDel"style="font-size: 8px;">Deletar</a>
-                </td>
-            </tr>
-                {% endfor %}
-         </tbody>
-        </table>
-    </div>
-   <div class="col-8 m-auto pt-3 pb-2 text-center">
-            <a href="/form3" class="btn-success"> Adicionar Peixes</a>
-    </div>
-
-    <div class="col-8 m-auto pt-4 pb-2 text-center">
-        <table class="table">
-          <!--INICIO DO CABEÇALHO -->
-          <thead class="thead-dark">
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">Especie</th>
-                <th scope="col">Peso Medio do Peixe_kg</th>
-                <th scope="col">Ações</th>
-            </tr>
-          </thead>
-            <!-- FIM DO CABEÇALHO-->
-          <tbody>
-           <!-- CORPO DA LINHA-->
-               {% for dbs in db %}
-            <tr>
-                 <th scope="row">{{dbs.id}}</th>
-                 <td>{{dbs.especie}}</td>
-                 <td>{{dbs.pesoMedioPeixe_kg}}</td>
-                <td>
-                    <a href="/view3/{{dbs.id}}/" class ="btn btn-dark">Visualizar</a>
-                     <a href="/edit3/{{dbs.id}}/" class ="btn btn-primary">Editar</a>
-                     <a href="delete3/{{dbs.id}}/" class ="btn btn-danger btnDel">Deletar</a>
-                </td>
-            </tr>
-            {% endfor %}
-         </tbody>
-        </table>
-    </div>
-
-    <div class="col-8 m-auto pt-3 pb-2 text-center">
-            <a href="/form4" class="btn-success"> Adicionar Ração</a>
-    </div>
-
-<div class="col-8 m-auto pt-4 pb-2 text-center">
-        <table class="table">
-          <!--INICIO DO CABEÇALHO -->
-          <thead class="thead-dark">
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">Quantidade de ração kg</th>
-                <th scope="col">Marca da ração</th>
-                <th scope="col">Preço da ração</th>
-                <th scope="col">Proteina Bruta</th>
-                <th scope="col">Ações</th>
-            </tr>
-          </thead>
-            <!-- FIM DO CABEÇALHO-->
-          <tbody>
-           <!-- CORPO DA LINHA-->
-               {% for dbs in db %}
-            <tr>
-                 <th scope="row">{{dbs.id}}</th>
-                 <td>{{dbs.quantidaderacaokg}}</td>
-                 <td>{{dbs.marcaracao}}</td>
-                 <td>{{dbs.precoracao}}</td>
-                 <td>{{dbs.protreinabruta}}</td>
-                <td>
-                     <a href="/view4/{{dbs.id}}/" class ="btn btn-dark"style="font-size: 8px;">Visualizar</a>
-                     <a href="/edit4/{{dbs.id}}/" class ="btn btn-primary"style="font-size: 8px;">Editar</a>
-                     <a href="delete4/{{dbs.id}}/" class ="btn btn-danger btnDel"style="font-size: 8px;">Deletar</a>
-                </td>
-            </tr>
-            {% endfor %}
-         </tbody>
-        </table>
- </body>
-</html>
+<body>
+ </html>
