--- a/app/Templates/create_racao.html
+++ b/app/Templates/create_racao.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="br-pt">
 <head>
-    <meta charset="UTF-8">
-    <title>Formulario de Cadastro</title>
+      <link rel="stylesheet" href="{% static 'css/create_peixe.css' %}">
 
 </head>
 <body>
@@ -26,7 +25,7 @@
                 <input type="submit" class=" btn btn-success" value="Salvar">
             </div>
         </form>
-         {% load static %}
+
 
     </div>
 </body>
