--- a/app/Templates/create_peixe.html
+++ b/app/Templates/create_peixe.html
@@ -8,22 +8,21 @@
 <body>
 <div class="form-container">
     <form class="horizontal-form">
-      <div class="form-row">
+
     <input type="button" id="voltar" value="Voltar">
-      </div>
+
       <h2>Cadastro Peixe</h2>
       <div class="form-row">
         <label for="especie">Especie:</label>
         <input type="text" id="especie" name="especie">
       </div>
         <div class="form-row">
-        <label for="Peso Medio do Peixe_kg">PesoMediodoPeixe_kg:</label>
-        <input type="text" id="Peso Medio do Peixe_kg">
-      </div>
-      <div class="form-row">
-        <input type="submit" value="Salvar">
-      </div>
-  </div>
+        <label for="PesoMediodoPeixe_kg ">Peso Medio do Peixe kg:</label>
+        <input type="text" id="PesoMediodoPeixekg">
+</div>
+        <input type="submit"  class="btn btn-success" value="Salvar">
+
+
 </form>
 
     </div>
