--- a/app/Templates/create_viveiro.html
+++ b/app/Templates/create_viveiro.html
@@ -6,10 +6,10 @@
 <form>
   <div class="form-container">
     <form class="horizontal-form">
-      <div class="form-row">
+
 
         <input type="button" id="voltar" value="Voltar">
-      </div>
+
       <h2>Cadastro Viveiro</h2>
       <div class="form-row">
         <label for="biomassa">Biomassa do Viveiro:</label>
@@ -59,9 +59,9 @@
         <label for="numero-peixe">N° de Peixe no viveiro:</label>
         <input type="text" id="numero-peixe">
       </div>
-      <div class="form-row">
-        <input type="submit" value="Enviar">
-      </div>
+
+        <input type="submit" class="btn btn-success" value="Enviar">
+
   </div>
 </form>
 <html>
