--- a/app/Templates/home.html
+++ b/app/Templates/home.html
@@ -1,20 +1,21 @@
 {% extends 'menu.html' %}
 {% load static %}
-{% block title%}Principal{% endblock %}
+{% block title%}FISH INFO{% endblock %}
 {% block body%}
 
 <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="{% static 'imagem/peixe.png'%}" class="d-block w-100" alt="..." style="max-height: 600px;">
+      <img src="{% static 'imagem/peixe.png'%}" class="d-block w-100 " alt="..." style="max-height: 400px;">
     </div>
     <div class="carousel-item">
-      <img src="{% static 'imagem/viveiro.png'%}" class="d-block w-100 " alt="..." style="max-height: 600px;">
-    </div>
-    <div class="carousel-item">
-      <img src="{% static 'imagem/logo.png'%}" class="d-block w-100 " alt="..." style="max-height: 600px;">
-    </div>
-  </div>
+      <img src="{%static 'imagem/viveiro.png'%}"  class="d-block w-100" alt="..." style="max-height: 400px;">
+</div>
+  <div class="carousel-item">
+      <img src="{%static 'imagem/pirarucu.png'%}"  class="d-block w-100" alt="..." style="max-height: 400px;">
+</div>
+
+
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
