--- a/app/Templates/menu.html
+++ b/app/Templates/menu.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block menu%}
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<link rel="stylesheet" href="{% static 'css/style.css' %}">
+<nav class="navbar navbar-expand-lg navbar-light bg-lightblue">
   <div class="container-fluid">
     <a class="navbar-brand text-white" href="#"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -14,6 +15,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Piscicultor</a>
+        </li>
+          <li class="nav-item">
+          <a class="nav-link" href="#">Biometria peixe</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -52,11 +56,11 @@
       </ul>
         <div class="col-6 m-auto pt-2 pb-2 my-lg-0 ml-auto">
       <form class="d-flex" role="Pesquisar">
-        <input class="form-control mr-sm-2 rounded""form-contro-1l me" type="search" placeholder="Pesquisa" aria-label="Search">
+        <input class="form-control mr-sm-2 rounded form-contro-1l me" type="search" placeholder="Pesquisa" aria-label="Search">
         <button class="btn btn-success my-2 my-sm-0 border rounded"type="submit">Pesquisar</button>
       </form>
     </div>
-  <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+  <nav class="navbar navbar-expand-lg navbar-light bg-lightblue">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
