--- a/static/CSS/create_peixe.css
+++ b/static/CSS/create_peixe.css
@@ -1,15 +1,16 @@
 .form-container {
     background-color: #b2d8ff;
     border: 1px solid #ced4da;
-    padding: 20px;
-    width: 400px;
+    padding: 10px;
+    width: 300px;
     margin: 0 auto;
     margin-top: 50px;
+    text-align: center;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
   }
 
-  /* Estilos para os campos do formulário */
-  .form-container .form-row {
+
+.form-container .form-row {
     display: flex;
     align-items: center;
     margin-bottom: 10px;
@@ -22,29 +23,13 @@
   .form-container .form-row input,
   .form-container .form-row select {
     flex: 1;
-    padding: 5px;
+    padding: 8px;
     border: 1px solid #ced4da;
     border-radius: 4px;
   }
 
-
-button:hover {
-  background-color: #45a049;
-}
-
-a {
-  text-decoration: none;
-  color: #2196F3;
-  margin-top: 10px;
-}
-
-a:hover {
-  text-decoration: underline;
-}
-
-.forgot-password,
-.register {
-   color: white;
-
+.btn-success {
+  background-color: #28a745;
+  border-color: #28a745;
 
 }
