--- a/app/Templates/create_viveiro.html
+++ b/app/Templates/create_viveiro.html
@@ -7,8 +7,9 @@
   <div class="form-container">
     <form class="horizontal-form">
 
-
-        <input type="button" id="voltar" value="Voltar">
+<div class="col-8 m-auto pt-2 pb-2 text-center">
+    <a href="/" class="btn btn-success">Voltar</a>
+</div>
 
       <h2>Cadastro Viveiro</h2>
       <div class="form-row">
@@ -60,7 +61,7 @@
         <input type="text" id="numero-peixe">
       </div>
 
-        <input type="submit" class="btn btn-success" value="Enviar">
+        <input type="submit" class="btn btn-success" value="Salvar">
 
   </div>
 </form>
