--- a/app/Templates/create_peixe.html
+++ b/app/Templates/create_peixe.html
@@ -9,7 +9,9 @@
 <div class="form-container">
     <form class="horizontal-form">
 
-    <input type="button" id="voltar" value="Voltar">
+ <div class="col-8 m-auto pt-2 pb-2 text-center">
+    <a href="/" class="btn btn-success">Voltar</a>
+</div>
 
       <h2>Cadastro Peixe</h2>
       <div class="form-row">
