--- a/app/Templates/create_racao.html
+++ b/app/Templates/create_racao.html
@@ -9,7 +9,9 @@
 <div class="form-container">
     <form class="horizontal-form">
 
-            <input type="button" id="voltar" value="Voltar">
+           <div class="col-8 m-auto pt-2 pb-2 text-center">
+    <a href="/" class="btn btn-success">Voltar</a>
+</div>
         <h2>Cadastro de Ração</h2>
         <div class="form-row">
             <label for="quantidadederacaokg">Quantidade de Racao kg:</label>
@@ -28,7 +30,7 @@
             <input type="text" id="proteinabruta">
         </div>
 
-            <input type="submit"  class="btn btn-success" value="Enviar">
+            <input type="submit"  class="btn btn-success" value="Salvar">
 
     </form>
 </div>
