--- a/app/Templates/home.html
+++ b/app/Templates/home.html
@@ -3,26 +3,49 @@
 {% block title%}FISH INFO{% endblock %}
 {% block body%}
 
-<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="{% static 'imagem/peixe.png'%}" class="d-block w-100 " alt="..." style="max-height: 400px;">
+<div class="container px-6">
+    <div class="row gx-6">
+        <div class="col-lg-6">
+            <!-- Conteúdo do trecho de código que você forneceu -->
+            <div class="p-5" >
+                <h2 class="display-8"  style="color: #000080;"><strong> Fish-Info: Gerenciamento de dados para piscicultor</strong> </h2>
+              <p> O FISH INFO tem como proposito de ajudar os piscicultores para ter uma
+                administração dos seus criadouros, assim promovendo o gerenciamento de informações
+                de criadouro por intermédio de um sistema web, no qual possuirá os requisitos
+                desejados de cadastramento e busca por informações dos viveiros do piscicultor.</p>
+
+            </div>
+        </div>
+        <div class="col-lg-6">
+            <!-- Carrossel (Carousel) aqui -->
+            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="{% static 'imagem/peixe.png'%}" class="d-block w-100 " alt="..."
+                            style="max-height: 300px;">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="{%static 'imagem/viveiro.png'%}" class="d-block w-100" alt="..."
+                            style="max-height: 400px;">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="{%static 'imagem/pirarucu.png'%}" class="d-block w-100" alt="..."
+                            style="max-height: 300px;">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
     </div>
-    <div class="carousel-item">
-      <img src="{%static 'imagem/viveiro.png'%}"  class="d-block w-100" alt="..." style="max-height: 400px;">
-</div>
-  <div class="carousel-item">
-      <img src="{%static 'imagem/pirarucu.png'%}"  class="d-block w-100" alt="..." style="max-height: 400px;">
 </div>
 
-
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
 {% endblock %}
