--- a/app/Templates/menu.html
+++ b/app/Templates/menu.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block menu%}
+
 <link rel="stylesheet" href="{% static 'css/style.css' %}">
 <nav class="navbar navbar-expand-lg navbar-light bg-lightblue">
   <div class="container-fluid">
@@ -14,7 +15,7 @@
           <a class="navbar-brand" aria-current="page" href="#"><img src="{% static 'imagem/logo3.png' %}" height="80px"/></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Piscicultor</a>
+          <a class="nav-link" href="{% url 'viewspiscicultor'%}">Piscicultor</a>
         </li>
           <li class="nav-item">
           <a class="nav-link" href="#">Biometria peixe</a>
@@ -24,8 +25,8 @@
             Viveiro
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">cadastrar</a></li>
-            <li><a class="dropdown-item" href="#">Visualizar</a></li>
+            <li><a class="dropdown-item" href="{% url 'create_viveiro'%}">cadastrar</a></li>
+            <li><a class="dropdown-item" href="{% url 'viewsviveiro'%}">Visualizar</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Editar</a></li>
           </ul>
@@ -35,8 +36,8 @@
            Peixe
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">cadastrar</a></li>
-            <li><a class="dropdown-item" href="#">Visualizar</a></li>
+            <li><a class="dropdown-item" href="{% url 'create_peixe'%}">cadastrar</a></li>
+            <li><a class="dropdown-item" href="{% url 'viewspeixe'%}">Visualizar</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Editar</a></li>
           </ul>
@@ -46,8 +47,8 @@
            Ração
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="dadosviveiro">cadastrar</a></li>
-            <li><a class="dropdown-item" href="#">Visualizar</a></li>
+            <li><a class="dropdown-item" href="{% url 'create_racao'%}">cadastrar</a></li>
+            <li><a class="dropdown-item" href="{% url 'viewsracao'%}">Visualizar</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Editar</a></li>
           </ul>
@@ -68,29 +69,29 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="/logout">Sair</a>
+        <a class="nav-link" href="{% url 'login'%}">Sair</a>
       </li>
     </ul>
   </div>
 </nav>
-
+    </div>
   </div>
 </nav>
 <div class="container"><br>{% endblock %}{% block footer%}<br><br></div>
-<footer class="bd-footer bg-body-tertiary" style="height: 200px">
+<footer class="bd-footer bg-body bg-white" style="height: 50%;">
     <div class="container text-body-secondary">
         <div class="row">
             <div class="col-6">
-                FISH INFO
+               <strong>FISH INFO</strong>
             </div>
             <div class="col-2">
-                Termo de Uso
+                <strong>Termo de Uso </strong>
             </div>
             <div class="col-2">
-                Sobre
+                <strong>Sobre</strong>
             </div>
             <div class="col-2">
-                Redes Sociais
+               <strong>Redes Sociais</strong>
             </div>
         </div>
     </div>
