--- a/static/CSS/create_piscicultor.css
+++ b/static/CSS/create_piscicultor.css
@@ -7,6 +7,7 @@
     margin-top: 50px;
     text-align: center;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+   border-radius: 10px;
   }
 
   /* Estilos para os campos do formulário */
