--- a/app/Templates/IndexPiscicultor.html
+++ b/app/Templates/IndexPiscicultor.html
@@ -22,8 +22,11 @@
       <th scope="col">#</th>
       <th scope="col">Piscicultor</th>
       <th scope="col">RG</th>
+        <th scope="col">Cep</th>
+        <th scope="col">Cidade</th>
         <th scope="col">Contato</th>
        <th scope="col">Senha</th>
+
       <th scope="col"></th>
 
     </tr>
@@ -32,11 +35,14 @@
   <tbody>
   {% for dbs in db %}
    <tr>
-      <th>{{dbs.id}}</th>
-      <td>{{dbs.nome}}</td>
-      <td>{{dbs.rg}}</td>
-      <td>{{dbs.contato}}</td>
+       <th>{{dbs.id}}</th>
+       <td>{{dbs.nome}}</td>
+       <td>{{dbs.rg}}</td>
+       <td>{{dbs.cep}}</td>
+       <td>{{dbs.cidade}}</td>
+       <td>{{dbs.contato}}</td>
        <td>{{dbs.senha}}</td>
+
       <td>
                      <a href="/viewspiscicultor/{{dbs.id}}/" class ="btn btn-primary">Visualizar</a>
                      <a href="/editPiscicultor/{{dbs.id}}/" class ="btn btn-primary">Editar</a>
