--- a/app/Templates/viewspiscicultor.html
+++ b/app/Templates/viewspiscicultor.html
@@ -68,8 +68,10 @@
         <div class="col-8 m-auto pt-2 pb-2 text-center">
             <strong>Piscicultor:</strong> {{db.nome}}<br>
             <strong>RG:</strong> {{db.rg}}<br>
+            <strong>Senha:</strong> {{db.cep}}<br>
             <strong>Contato:</strong> {{db.contato}}<br>
             <strong>Senha:</strong> {{db.senha}}<br>
+
         </div>
 
         <div class="col-8 m-auto pt-2 pb-2 text-center btn-container">
