--- a/app/Templates/create_piscicultor.html
+++ b/app/Templates/create_piscicultor.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Formulario de Cadastro</title>
     <link rel="stylesheet" href="{% static 'css/create_piscicultor.css' %}">
+    <script type="application/javascript" src="{% static 'JS/js.js' %}" ></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 </head>
 <body>
@@ -12,7 +13,6 @@
         <div class="col-12 m-auto pt-2 pb-2 text-center">
             <h1>Cadastro</h1>
         </div>
-
         <div class="col-12 m-auto pt-2 pb-2 text-center">
             <div id="result"></div>
            <form name="formPiscicultor" id="formPiscicultor" action="{% if db %}/updatePiscicultor/{{dbpiscicultor.id}}/{% else %}/create_piscicultor/{% endif %}" method="POST">
@@ -29,7 +29,12 @@
             {{ formPiscicultor.rg }}
         </div>
     </div>
-    <div class="form-group row">
+              <!-- ... Seu código HTML existente ... -->
+
+
+
+
+               <div class="form-group row">
         <label for="{{ formPiscicultor.contato.id_for_label }}" class="col-sm-2 col-form-label">Contato:</label>
         <div class="col-sm-10">
             {{ formPiscicultor.contato }}
@@ -40,6 +45,7 @@
         <div class="col-sm-10">
             {{ formPiscicultor.senha }}
         </div>
+
     </div>
     <div class="formPiscicultor-group mt-4 btn-container">
         <div class="col-sm-10 offset-sm-2">
