--- a/app/Templates/IndexViveiro.html
+++ b/app/Templates/IndexViveiro.html
@@ -11,32 +11,29 @@
 
 <body>
 
-<div class="col-8 m-auto pt-3 pb-2 text-center">
-    <a href="/" class="btn btn-info">Voltar</a>
-</div>
+
 <div class="col-8 ">
     <!-- On rows -->
     <table class="table table-sm">
         <table class="table table-bordered small-font">
             <thead>
             <tr>
-                <th scope="col">#</th>
-                <th scope="col">Biomassa do viveiro</th>
-                <th scope="col">Data Inicial</th>
-                <th scope="col">Mortalidade</th>
-                <th scope="col">Data Retirada</th>
-                <th scope="col">N° viveiro</th>
-                <th scope="col">Temperatura</th>
-                <th scope="col">LarguraM</th>
-                <th scope="col">Ganho Viveiro</th>
-                <th scope="col">Lado menorM</th>
-                <th scope="col">PH da agua</th>
-                <th scope="col">Amostragem Veveiro</th>
-                <th scope="col">N° de peixe no Viveiro</th>
-                <th scope="col"></th>
+               <th scope="col">#</th>
+          <th scope="col" style="font-size: 12px; white-space: nowrap;">Biomassa do viveiro</th>
+<th scope="col" style="font-size: 12px; white-space: nowrap;">Data Inicial</th>
+<th scope="col" style="font-size: 12px; white-space: nowrap;">Mortalidade</th>
+<th scope="col" style="font-size: 12px; white-space: nowrap;">Data Retirada</th>
+<th scope="col" style="font-size: 12px; white-space: nowrap;">N° viveiro</th>
+<th scope="col" style="font-size: 12px; white-space: nowrap;">Temperatura</th>
+<th scope="col" style="font-size: 12px; white-space: nowrap;">Largura m²</th>
+<th scope="col" style="font-size: 12px; white-space: nowrap;">Ganho Viveiro</th>
+<th scope="col" style="font-size: 12px; white-space: nowrap;">Lado menor m²</th>
+<th scope="col" style="font-size: 12px; white-space: nowrap;">PH da agua</th>
+<th scope="col" style="font-size: 12px; white-space: nowrap;">Amostragem Veveiro</th>
+<th scope="col" style="font-size: 12px; white-space: nowrap;">N° de peixe no Viveiro</th>
 
-            </tr>
-            </thead>
+ </tr>
+ </thead>
 
             <tbody>
             {% for dbs in db %}
@@ -55,9 +52,11 @@
                 <td>{{dbs.amostragemViveiro}}</td>
                 <td>{{dbs.numeroPeixesViveiro}}</td>
                 <td>
-                    <a href="/viewsviveiro/{{dbs.id}}/" class="btn btn-primary">Visualizar</a>
-                    <a href="/editViveiro/{{dbs.id}}/" class="btn btn-primary">Editar</a>
-                   <a href="/deleteViveiro/{{dbs.id}}/" class ="btn btn-danger btnDel">Deletar</a>
+                    <a href="/viewsviveiro/{{dbs.id}}/" ><img src="{% static 'imagem/visualizar.png' %}"  alt="" width="30" height="30"></a>
+
+                      <td> <a href="/editViveiro/{{dbs.id}}/" ><img src="{% static 'imagem/editar.png' %}"  alt="" width="30" height="30"></a>
+
+                    <td> <a href="/deleteViveiro/{{dbs.id}}/"  class ="btn btn- btnDel"><img src="{% static 'imagem/excluir.png' %}"  alt="" width="30" height="30"></a>
 
                 </td>
             </tr>
@@ -67,6 +66,9 @@
 
         </table>
 
-
+        <div class="col-8 m-auto pt-3 pb-2 text-center">
+            <a href="/" class="btn btn-info">Voltar</a>
+        </div>
 </body>
+
 </html>
