--- a/app/Templates/home.html
+++ b/app/Templates/home.html
@@ -3,16 +3,13 @@
 {% block title%}FISH INFO{% endblock %}
 {% block body%}
 
-<html>
-<head>
-    <!DOCTYPE html>
-<html>
+
 <head>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <style>
         /* Defina o estilo para o elemento body para a imagem de fundo */
         body {
-            background-image: url('{% static 'imagem/açude.png' %}');
+            background-image: url('{% static 'imagem/acude.png' %}');
             background-size: cover;
             background-position: center;
             background-attachment: fixed; /* Isso fixa a imagem de fundo para que ela não role com a página */
@@ -32,7 +29,7 @@
             <div class="col-lg-6">
                 <div class="p-2">
                   <h2 class="display-8"  style="color: #D2691E"><strong> Fish-Info: Gerenciamento de dados para piscicultor</strong> </h2>
-              <p style="color: #2F4F4F"> O FISH INFO tem como proposito de ajudar os piscicultores para ter uma
+             <p style="color: #008000; font-weight: bold;"> O FISH INFO tem como proposito de ajudar os piscicultores para ter uma
                 administração dos seus criadouros, assim promovendo o gerenciamento de informações
                 de criadouro por intermédio de um sistema web, no qual possuirá os requisitos
                 desejados de cadastramento e busca por informações dos viveiros do piscicultor.</p>
@@ -44,9 +41,6 @@
         </div>
     </div>
 </body>
-</html>
-
-
 
 
 
