--- a/app/Templates/menu.html
+++ b/app/Templates/menu.html
@@ -29,7 +29,7 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item navbar-link" href="{% url 'create_viveiro'%}"><strong>Cadastrar</strong></a></li>
-                        <li><a class="dropdown-item navbar-link" href="{% url 'IndexPeixe'%}"><strong>Editar</strong></a></li>
+                        <li><a class="dropdown-item navbar-link" href="{% url 'IndexViveiro'%}"><strong>Editar</strong></a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
@@ -47,7 +47,7 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item navbar-link" href="{% url 'create_racao'%}"><strong>Cadastrar</strong></a></li>
-                        <li><a class="dropdown-item navbar-link" href="{% url 'IndexPeixe'%}"><strong>Editar</strong></a></li>
+                        <li><a class="dropdown-item navbar-link" href="{% url 'IndexRacao'%}"><strong>Editar</strong></a></li>
                     </ul>
                 </li>
             </ul>
