--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -1,57 +1,73 @@
-/* Estilos para a barra de navegação */
-.navbar-custom {
-    background-color: #1E90FF;
-    color: #fff;
-}
-
-nav ul {
-    list-style: none;
-    padding: 0;
+* {
     margin: 0;
+    border: 0;
+    padding: 0;
 }
 
-nav ul li {
-    display: inline;
-    margin-right: 20px;
-}
-
-nav ul li a {
-    text-decoration: none;
-    color: #fff;
-    font-weight: bold;
-}
-
-/* Estilos para o menu suspenso */
-.dropdown {
+.content {
     position: relative;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-image: url('../imagens/background.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    padding: 40px;
+}
+
+.text {
+    max-width: 870px;
+    display: flex;
+    margin: 0 auto;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    color: white;
+}
+
+.text h2 {
+    font-size: 2.1em;
+    margin-bottom: 10px;
+    line-height: 2.5em;
+    font-weight: 700;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.10);
+}
+
+.text h2 span {
+    font-size: 3.5em;
+    color: #006400;
+}
+
+.text p {
+    color: white;
+}
+
+.text a {
     display: inline-block;
-}
-
-.dropbtn, .dropdown-content a {
+    margin-top: 50px;
+    padding: 10px 25px;
+    background: black;
+    color: white;
+    font-weight: 500;
+    letter-spacing: 1px;
     text-decoration: none;
-    color: #fff;
-    font-weight: bold;
+    border-radius: 40px;
+    transition: 0.3s ease-in-out;
 }
 
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #333;
-    min-width: 160px;
-    z-index: 1;
+.text a:hover {
+    transform: translateY(-10px);
 }
 
-.dropdown:hover .dropdown-content {
-    display: block;
+.conteudo-apos-body {
+    background-color: #f0f0f0;
+    text-align: center;
+    padding: 20px;
 }
 
-/* Estilo para o link "Sair" */
-.logout {
-    float: right;
-}
-
-.texto-grande {
-    font-size: 23px;
-}
+/* Adicione estilos para outras seções aqui */
 
 
