--- a/app/Templates/menu.html
+++ b/app/Templates/menu.html
@@ -55,7 +55,7 @@
 
 
 
-                <div class="" id="navbarSupportedContent">
+                <div class="id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
                           <li class="nav-item">
